--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-bg: #4527a0;
+  --secondary-bg: #ff99bb;
+  --primary-text: #2dc7db;
+  --secondary-text: #2dc7db;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
